# aray-code

./: .gitignore  ANALYSIS-Supertonic3-TTS.md  ArayCode.sln  LICENSE  PROTOCOL_V4_RESEARCH.md  README.md  SRP_DRY_AUDIT.md  SRP_DRY_AUDIT_STATUS_SERVICES.md
analysis/: TTS_PIPELINE_ANALYSIS.md
packaging/linux/: build-appimage.sh
packaging/linux/ArayCode.AppDir/: .DirIcon  AppRun  README.md  aray-code.desktop
packaging/windows/: aray-code.iss
src/ArayCode/: ArayCode.csproj  aray-code.iss
src/ArayCode/Properties/: AssemblyInfo.cs
src/ArayCode/code/: AppBootstrapper.cs  AppExitHandler.cs  AppRunner.ConfigSetup.cs  AppRunner.ShellSetup.cs  AppRunner.TtsSetup.cs  AppRunner.cs  Program.cs
src/ArayCode/scripts/: pyproject.toml  service.py  tts_service.py
src/OpenClawPTT/: OpenClawPTT.csproj
src/OpenClawPTT/code/: AppBootstrapper.cs  AppRunner.ConfigSetup.cs  AppRunner.ShellSetup.cs  AppRunner.TtsSetup.cs  AppRunner.cs  Program.cs
tests/ArayCode.Tests/: AgentRegistryCollection.cs  ArayCode.Tests.csproj  GatewayTestBase.cs  TESTBASE_MIGRATION_GUIDE.md
tests/ArayCode.Tests/AgentOutput/: AgentHotkeyServiceTests.cs  AgentOutputCoordinatorTests.cs  DirectLlmGpt4oDiagnosticTests.cs  ExtractUniformMarkupTests.cs  SpectreMarkupBehaviorTests.cs
tests/ArayCode.Tests/AgentSettings/: AgentRegistrySettingsTests.cs  AgentSettingsServiceTests.cs
tests/ArayCode.Tests/App/: AppBootstrapperTests.cs  AppExitHandlerTests.cs  AppRunnerStabilityTests.cs  AppRunnerTests.cs
tests/ArayCode.Tests/Audio/: AudioServiceTests.cs  (+5 more)
tests/OpenClawPTT.Tests/: AgentRegistryCollection.cs
(+590 files in other folders)
